# tide

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/logos/icons/: icon.icns
locales/: en.toml  zh-CN.toml
scripts/: publish-release.sh
src/: assets.rs  autostart.rs  main.rs  single_instance.rs  state.rs  tray.rs  updater.rs
src/components/: button.rs  mod.rs  tag.rs  task_form.rs
src/helpers/: action.rs  date.rs  fs.rs  i18n.rs  mod.rs  theme.rs
src/state/: data.rs  tide.rs
src/views/: about.rs  content.rs  floating.rs  mod.rs  settings.rs  sidebar.rs  titlebar.rs
src/views/content/: actions.rs  drag.rs  menu.rs  render.rs  row_completed.rs  row_pending.rs  task.rs  view.rs
